[gd_scene load_steps=11 format=2]

[ext_resource path="res://Textures/Hacking/Grid.png" type="Texture" id=1]
[ext_resource path="res://Hacking/HackingGame.gd" type="Script" id=2]
[ext_resource path="res://HUD/ThemeBig.tres" type="Theme" id=3]
[ext_resource path="res://Textures/Hacking/Hacker.png" type="Texture" id=4]
[ext_resource path="res://Textures/Hacking/AccessDenied.png" type="Texture" id=5]
[ext_resource path="res://Textures/Hacking/AccessGranted.png" type="Texture" id=6]
[ext_resource path="res://HUD/Button.tres" type="Theme" id=7]

[sub_resource type="Animation" id=1]
resource_name = "GameOver"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AccessDenied:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Grid/Hacker:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1440.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AccessDenied:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Grid/Hacker:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AccessGranted:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Success"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("AccessGranted:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="HackingGame" type="Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -1099.0
margin_top = -540.0
margin_right = -27.0
margin_bottom = 540.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -508.0
margin_top = -518.0
margin_right = 516.0
margin_bottom = 506.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hacker" type="TextureRect" parent="Grid"]
margin_right = 84.5
margin_bottom = 84.5
rect_min_size = Vector2( 84.5, 84.5 )
rect_pivot_offset = Vector2( 42.25, 42.25 )
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoTop" type="Label" parent="."]
margin_left = 41.0
margin_top = 27.0
margin_right = 1058.0
margin_bottom = 291.0
theme = ExtResource( 3 )
text = "Draw a single uninterrupted path through all of the blue spheres without touching any red spheres."
align = 1
autowrap = true

[node name="InfoBottom" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -483.5
margin_top = -132.0
margin_right = 533.5
margin_bottom = -46.0
theme = ExtResource( 3 )
text = "Use the movement keys to navigate."
align = 1
autowrap = true

[node name="AccessDenied" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -511.0
margin_top = -515.0
margin_right = 513.0
margin_bottom = 509.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AccessDenied"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -183.5
margin_top = -43.0
margin_right = 183.5
margin_bottom = 43.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 183, 43 )
theme = ExtResource( 3 )
text = "ACCESS DENIED"
align = 1

[node name="AccessGranted" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -507.0
margin_top = -517.0
margin_right = 521.0
margin_bottom = 511.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/GameOver = SubResource( 1 )
anims/RESET = SubResource( 2 )
anims/Success = SubResource( 3 )

[node name="HackButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -209.5
margin_top = -116.0
margin_right = 256.5
margin_bottom = 68.0
theme = ExtResource( 7 )
text = "Hacking Level too low"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HackButton" to="." method="_on_HackButton_pressed"]
